// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletLabel should first signal that it is loading if label is not known 1`] = `
<Text
  allowFontScaling={false}
  style={
    [
      {
        "color": "#2B1911",
        "fontFamily": "Baloo2-Regular",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 24,
      },
      undefined,
    ]
  }
>
  loading...
</Text>
`;

exports[`WalletLabel should render correctly if address is payout address 1`] = `
<Text
  allowFontScaling={false}
  style={
    [
      {
        "color": "#2B1911",
        "fontFamily": "Baloo2-Regular",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 24,
      },
      undefined,
    ]
  }
>
  addressLabel
</Text>
`;

exports[`WalletLabel should render correctly if address is peach wallet address 1`] = `
<Text
  allowFontScaling={false}
  style={
    [
      {
        "color": "#2B1911",
        "fontFamily": "Baloo2-Regular",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 24,
      },
      undefined,
    ]
  }
>
  Peach wallet
</Text>
`;

exports[`WalletLabel should render correctly if address is unknown 1`] = `
<Text
  allowFontScaling={false}
  style={
    [
      {
        "color": "#2B1911",
        "fontFamily": "Baloo2-Regular",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 24,
      },
      undefined,
    ]
  }
>
  custom payout address
</Text>
`;

exports[`WalletLabel should render correctly if label is known 1`] = `
<Text
  allowFontScaling={false}
  style={
    [
      {
        "color": "#2B1911",
        "fontFamily": "Baloo2-Regular",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 24,
      },
      undefined,
    ]
  }
>
  Wallet Label
</Text>
`;
